correcting footer spacing

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -6,12 +6,12 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  row-gap: 0.5rem;
 }
 
 .footer * {
   font-size: 1rem;
   text-align: center;
-  margin-bottom: 0.9rem;
 }
 
 .footer a {
